--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div class="contenitore">
+        <h1>Lista spesa</h1>
+        <ul class="lista-spesa">
+            <!-- JS -->
+        </ul>
+    </div>
     
     <!-- Script -->
     <script src="js/script.js"></script>
