ESERCIZIO COMPLETO + BONUS AGGIUNGERE ELEMENTI

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <ul class="lista-spesa">
             <!-- JS -->
         </ul>
+        <div class="sezione-elementi-nuovi">
+            <label for="elemento"></label>
+            <input type="text" id="elemento">
+            <button class="aggiungi-elemento">Aggiungi elemento</button>
+        </div>
     </div>
     
     <!-- Script -->
